--- a/public/react-dom-router-example.html
+++ b/public/react-dom-router-example.html
@@ -6,9 +6,11 @@
     <title>React Routing Example</title>
   </head>
   <body>
+    <!-- components\Header.jsx -->
     <header>
       <h1>React Routing Example</h1>
     </header>
+    <!-- components\Nav.jsx -->
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
@@ -18,25 +20,25 @@
       </ul>
     </nav>
     <article>
-      <!-- url : / -->
+      <!-- url : / -> pages\Home.jsx -->
       <div>
         <h2 id="home">Home Page</h2>
         <p>Welcome to the Home Page!</p>
       </div>
 
-      <!-- url : /about -->
+      <!-- url : /about -> pages\About.jsx -->
       <div>
         <h2 id="about">About Page</h2>
         <p>This is the About Page.</p>
       </div>
 
-      <!-- url : /contact -->
+      <!-- url : /contact -> pages\Contact.jsx -->
       <div>
         <h2 id="contact">Contact Page</h2>
         <p>Get in touch with us!</p>
       </div>
 
-      <!-- url : /dashboard -->
+      <!-- url : /dashboard -> pages\Dashboard.jsx -->
       <div>
         <h2 id="dashboard">Dashboard</h2>
         <p>This is the dashboard page</p>
